--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
       <li>Health</li>
     </ul>
   </header>
+  <main class="main">
+    <aside></aside>
+    <section class="main-content">
+      <article></article>
+      <article></article>
+      <article></article>
+    </section>
+    <aside></aside>
+  </main>
   <script src="src/app.js"></script>
 </body>
 </html>
