[kangning] feat: finish about

--- a/index.html
+++ b/index.html
@@ -24,11 +24,37 @@
     </ul>
   </header>
   <main class="main">
-    <aside></aside>
+    <aside class="aside-left">
+      <div class="aside-left-about">
+        <span class="aside-left-about-header">About</span>
+        <span class="aside-left-about-description">
+          Etiam port asem malesuada magna mollis euismod.
+          Cras matt is consectetur purus sita met fermentum.
+          Aenean lacinia bibendum null as edcon secte tu
+        </span>
+      </div>
+
+      <div class="aside-left-archives">
+        <span class="aside-left-archives-header">Archives</span>
+        <ul class="aside-left-archives-date">
+          <li>January 2020</li>
+          <li>December 2019</li>
+          <li>November 2019</li>
+          <li>October 2019</li>
+          <li>September 2019</li>
+          <li>Aug us L 2019</li>
+          <li>July _ 2019</li>
+          <li>June 2019</li>
+          <li>May 2019</li>
+          <li>ApriL 2019</li>
+        </ul>
+      </div>
+      
+    </aside>
     <section class="main-content">
-      <article></article>
-      <article></article>
-      <article></article>
+      <article class="article1"></article>
+      <article class="article2"></article>
+      <article class="article3"></article>
     </section>
     <aside></aside>
   </main>
