[kangning] feat: add article1

--- a/index.html
+++ b/index.html
@@ -49,12 +49,47 @@
           <li><a href="#">April 2019</a></li>
         </ul>
       </div>
-      
     </aside>
     <section class="main-content">
-      <article class="article1"></article>
-      <article class="article2"></article>
-      <article class="article3"></article>
+      <article class="article1">
+        <figure class="article1-figure">
+          <img class="article1-image" src="./src/images/1.png" />
+        </figure>
+        <section class="article1-content">
+          <span class="article1-header">Article 1</span>
+          <span class="article1-description">
+            Donee id élit non m porta gravida at eget metus. 
+            Fusee dapibus. telkis ac cursus commodo, tortor mauris condimentum ntbh.
+          </span>
+          <a class="article-link">View details »</a>
+        </section>
+      </article>
+      <article class="article2">
+        <figure class="article2-figure">
+          <img class="article2-image" src="./src/images/1.png" />
+        </figure>
+        <section class="article2-content">
+          <span class="article2-header">Article 1</span>
+          <span class="article2-description">
+            Donee id élit non m porta gravida at eget metus. 
+            Fusee dapibus. telkis ac cursus commodo, tortor mauris condimentum ntbh.
+          </span>
+          <a class="article-link">View details »</a>
+        </section>
+      </article>
+      <article class="article3">
+        <figure class="article3-figure">
+          <img class="article3-image" src="./src/images/1.png" />
+        </figure>
+        <section class="article3-content">
+          <span class="article3-header">Article 1</span>
+          <span class="article3-description">
+            Donee id élit non m porta gravida at eget metus. 
+            Fusee dapibus. telkis ac cursus commodo, tortor mauris condimentum ntbh.
+          </span>
+          <a class="article-link">View details »</a>
+        </section>
+      </article>
     </section>
     <aside></aside>
   </main>
