[kangning] feat: add main

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </aside>
     <section class="main-content">
       <article class="article1">
-        <figure class="article1-figure">
-          <img class="article1-image" src="./src/images/1.png" />
+        <figure class="article-figure">
+          <img class="article-image" src="./src/images/1.png" />
         </figure>
         <section class="article1-content">
           <span class="article1-header">Article 1</span>
@@ -64,32 +64,43 @@
           <a class="article-link">View details »</a>
         </section>
       </article>
-      <article class="article2">
-        <figure class="article2-figure">
-          <img class="article2-image" src="./src/images/1.png" />
-        </figure>
-        <section class="article2-content">
-          <span class="article2-header">Article 1</span>
-          <span class="article2-description">
-            Donee id élit non m porta gravida at eget metus. 
-            Fusee dapibus. telkis ac cursus commodo, tortor mauris condimentum ntbh.
-          </span>
-          <a class="article-link">View details »</a>
-        </section>
-      </article>
       <article class="article3">
-        <figure class="article3-figure">
-          <img class="article3-image" src="./src/images/1.png" />
+        <figure class="article-figure">
+          <img class="article-image" src="./src/images/1.png" />
         </figure>
         <section class="article3-content">
-          <span class="article3-header">Article 1</span>
+          <span class="article3-header">Article 3</span>
           <span class="article3-description">
-            Donee id élit non m porta gravida at eget metus. 
-            Fusee dapibus. telkis ac cursus commodo, tortor mauris condimentum ntbh.
+            Donee sed odio dui. Cras Justo odio, dapibus ac facilists in, 
+            egestas eget quam. Vestibulum id ligula porta felis euismod semper. 
+            Fusee dapibus. tellus ae cursus com modo, tortor maurís condimentum nibh, 
+            ut fermentum massa justo sit a met risus.
           </span>
           <a class="article-link">View details »</a>
         </section>
       </article>
+      <article class="article2">
+        <figure class="article-figure">
+          <img class="article-image" src="./src/images/1.png" />
+        </figure>
+        <section class="article2-content">
+          <span class="article2-header">Article 2</span>
+          <span class="article2-description">
+            Donee id élit non mi porta gravida at eget met us Fusee dapibus. 
+            tellus ae cursus com modo, tortor maurls condimentum mbh. 
+            ut fermentum massa justo sit amet nsus. Etiam porta sem malesuada
+            magna mollis euismod. Donee sed odio dm. Donee id elit non mi porta 
+            gravida at eget metus. Fusee dapibus. tellus ac cursus commodo, tortor
+            mauns condimentum nlbh. ut fermentum massa justo sit amet risus.
+            Edam porta sem malesuada magna mollis euismod. Donee sed odio dui. 
+            Donee id elrt non rm porta gravida at eget metus. Fusee dapibus. 
+            tellus ac cursus commodo. tortor mauris condimentum mbh, ut fermentum massa
+            justo sit amet risus. Edam porta sem malesuada magna mollis euismod.
+          </span>
+          <a class="article-link">View details »</a>
+        </section>
+      </article>
+      
     </section>
     <aside></aside>
   </main>
