[kangning] feat: finish main

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
           Aenean lacinia bibendum null as edcon secte tu
         </span>
       </div>
-
       <div class="aside-left-archives">
         <span class="aside-left-archives-header">Archives</span>
         <ul class="aside-left-archives-date">
@@ -100,9 +99,22 @@
           <a class="article-link">View details »</a>
         </section>
       </article>
-      
     </section>
-    <aside></aside>
+    <aside class="aside-login">
+      <div class="login-panel">
+        <div class="login-panel-input">
+          <input class="login-panel-input-text-email" type="text" placeholder="Email address"/>
+          <input class="login-panel-input-text-password" type="password" placeholder="password"/>
+          <div class="login-panel-input-remember-me">
+            <input type="checkbox"/>
+            <span>Remember me</span>
+          </div>
+        </div>
+        <div class="login-panel-input-sign-in">
+          <button class="login-panel-input-sign-in-button">Sign in</button>
+        </div>
+      </div>
+    </aside>
   </main>
   <script src="src/app.js"></script>
 </body>
