--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
       </div>
     </aside>
   </main>
+  <footer class="copyright-info">
+    <span>AdvancedCSS homework build by <a href="#">@Your Name</a></span>
+    <span><a href="#">back to top</a></span>
+  </footer>
   <script src="src/app.js"></script>
 </body>
 </html>
